--- a/src/components/FormPages/formStyle.module.css
+++ b/src/components/FormPages/formStyle.module.css
@@ -1,3 +1,5 @@
+
+
 .pageStyle {
     margin: auto;
     width: 400px;
@@ -7,108 +9,115 @@
     flex-wrap: wrap;
     box-shadow: 0px 0px 4px 2px #f3e9e9;
     margin-top: 180px;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
-.pageStyle h1{
-    color: var(--main-color);
+.pageStyle h1 {
+    color: #007bff; 
     font-size: xxx-large;
     margin: 2px;
-}
-
-.pageStyle form{
-    margin: 30px 0px;
-    display: flex;
-    flex-direction: column;
     text-align: center;
 }
 
-.pageStyle input{
+.pageStyle span {
+    color: #555;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+    display: block;
+}
+
+.pageStyle form {
+    margin: 30px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pageStyle input {
     font-size: 20px;
-    width: auto;
+    width: calc(100% - 30px);
     padding: 15px;
     margin: 10px 0px;
     background: transparent;
-    border: 1px solid gray;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
 }
 
-.pageStyle button{
+.pageStyle button {
     font-size: 25px;
-    width: auto;
+    width: calc(100% - 30px);
     padding: 15px;
     margin: 15px 0px;
     border: none;
     color: white;
-    background-color: var(--main-color);
+    background-color: #007bff;
     cursor: pointer;
+    border-radius: 8px;
 }
 
-.otherPageLink{
+.pageStyle button:hover {
+    background-color: #0056b3;
+}
+
+
+.otherPageLink {
     margin: 15px;
     text-align: center;
 }
 
-.otherPageLink a{
-    color:black
+.otherPageLink a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.otherPageLink a:hover {
+    text-decoration: underline;
 }
 
 /* Responsiveness */
-
 @media screen and (max-width: 768px) {
-    .pageStyle{
+    .pageStyle {
         margin-top: 40px;
     }
-    .pageStyle input{
-        width: 400px;
-        padding: 15px;
-        font-size: 15px;
+    .pageStyle input,
+    .pageStyle button {
+        width: calc(100% - 30px);
     }
-    .pageStyle button{
-        width: 400px;
-        padding: 10px;
-    }
-  }
-  
+}
+
 @media screen and (max-width: 640px) {
     .pageStyle {
         padding-left: 50px;
     }
-    .pageStyle input{
-        width: 350px;
-    }
-    .pageStyle button{
-        width: 350px;
+    .pageStyle input,
+    .pageStyle button {
+        width: calc(100% - 30px);
     }
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width: 480px) {
     .pageStyle {
         padding-left: 50px;
     }
-
-    .pageStyle input{
-        width: 250px;
-    }
-    .pageStyle button{
-        width: 250px;
+    .pageStyle input,
+    .pageStyle button {
+        width: calc(100% - 30px);
     }
 }
 
-@media screen and (max-width:300px) {
-    .pageStyle{
+@media screen and (max-width: 300px) {
+    .pageStyle {
         padding-left: 15px;
     }
-    .pageStyle h1{
+    .pageStyle h1 {
         font-size: xx-large;
+        text-align: center;
     }
-    .pageStyle input{
-        width: 200px;
-        padding: 10px;
-        font-size: 10px;
-        margin: 10px;
-    }
-    .pageStyle button{
-        width: 200px;
-        font-size: 15px;
-        padding: 5px;
+    .pageStyle input,
+    .pageStyle button {
+        width: calc(100% - 30px);
     }
 }
